src/test/ui/parser/issue-15980.stderr
error: expected one of `!`, `.`, `::`, `=>`, `?`, or an operator, found `{`
  --> $DIR/issue-15980.rs:6:47
   |
LL |         Err(ref e) if e.kind == io::EndOfFile {
   |                                               ^ expected one of `!`, `.`, `::`, `=>`, `?`, or an operator

error: aborting due to previous error

